[project]
name = "data-extraction-experiments"
version = "0.1.0"
description = "Project base for running data extraction attacks on multi-lingual data"
authors = [
  { name = "Chai", email = "chaitanya.p2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch",
  "transformers",
  "numpy",
  "tqdm",
  "zstandard",
  "datasets",
  "bitsandbytes",
  "accelerate",
  "stanza",
  "pandas"
]

[tool.hatch.envs.default]

dependencies = []

[tool.hatch.run.run1]
cmd = "python data_batch1.py"

[tool.hatch.run.run2]
cmd = "python data_batch2.py"

[tool.hatch.run.run3]
cmd = "python data_batch3.py"

[tool.hatch.run.run4]
cmd = "python data_batch4.py"

[tool.hatch.envs.dev]

dependencies = [
  "black",
  "ruff",
  "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
